# semaphorechat

./: .gitignore
backend/: .env.example  go.mod  go.sum  main.go
backend/config/: config.go
backend/db/: db.go  schema.sql
backend/db/migrations/: 002_add_file_messages.sql
backend/handlers/: auth.go  auth_google.go  calls.go  chats.go  messages.go  push.go  users.go  ws.go
backend/middleware/: auth.go
backend/models/: models.go
backend/ws/: hub.go
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: firebase-messaging-sw.js  manifest.json  sw.js
frontend/src/: App.jsx  App.module.css  App.tsx  main.tsx
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: lib.rs
frontend/src/components/: CallModal.jsx  CallModal.module.css  CallModal.tsx  Chat.jsx  Chat.module.css  Chat.tsx  ChatScreen.jsx  ChatScreen.module.css  ChatScreen.tsx  ConnectionStats.jsx  ConnectionStats.module.css  ConnectionStats.tsx  Loading.jsx  Loading.module.css  Loading.tsx  MatrixRain.jsx  MatrixRain.module.css  MatrixRain.tsx  Message.jsx  Message.module.css  Message.tsx  ScanlinesOverlay.jsx  ScanlinesOverlay.module.css  ScanlinesOverlay.tsx  Sidebar.jsx  Sidebar.module.css  Sidebar.tsx
frontend/src/pages/: ChatPage.jsx  ChatPage.module.css  (+10 more)
migrate/: migrate.js  package-lock.json  package.json
mobile/: App.tsx  app.json  package-lock.json  package.json  tsconfig.json
mobile/src/: api.ts  config.ts  theme.ts
(+26 files in other folders)
